# vectoriser

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  shell.nix
.github/workflows/: docker-publish.yml
src/: cli.rs  config.rs  main.rs  models.rs
src/db/: queries.rs
src/embedding/: chunker.rs  mod.rs  model.rs
src/handlers/: job.rs  mod.rs  resume.rs
src/queue/: consumer.rs  publisher.rs
src/vector_store/: qdrant.rs
