[package]
name = "vectoriser"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"
fastembed = "5.13.4"
sqlx = { version = "0.8", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "uuid",
  "json",
] }
qdrant-client = "1.17.0"
lapin = "4.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
envy = "0.4"
clap = { version = "4", features = ["derive"] }
tokio-retry = "0.3"
axum = "0.8"
